Mon Dec 16 13:42:44 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tl: Version 7.61.15 was released.

	* TL-ELS (tl-modules): Add filename.el.

	* filename.el: New module.

	* tl-str.el: Variable `filename-special-char-range' variable
 	`filename-space-char-range' were abolished.

	Function `replace-as-filename' was moved to filename.el.


Wed Dec  4 04:56:28 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tl: Version 7.61.14 was released.

Tue Nov 26 19:55:55 1996  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* install.el (install-file): Delete old file instead of chmod.
	(install-elisp-module): Ditto.

Tue Nov 26 12:02:00 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* TL-ELS (tl-modules): bitmap.el, x-face-mule.el and
 	smiley-mule.el were moved to ../bitmap-mule/.

Mon Nov 18 15:03:58 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* TL-ELS: sinfo.el was moved to ../sinfo/.


Sat Nov 16 08:38:57 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tl: Version 7.61.13 was released.

Fri Nov 15 12:10:41 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mk-tl: add "../emu" to load-path.

	* TL-ELS (tl-modules): emu modules were moved to ../emu/.

	* install.el (install-detect-elisp-directory): New optional
 	argument `allow-version-specific'.

Thu Nov  7 20:09:49 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* bitmap.el (charset-bitmap): Renamed from `lc-bitmap'.

	* bitmap.el: Function `fontset-height' was renamed to
 	`fontset-pixel-height' in Emacs/mule.

	* emu-e20.el (fontset-pixel-height): Renamed from
 	`fontset-height'.

	* emu-e20.el (fontset-height): fixed.


Thu Oct 24 07:56:18 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tl: Version 7.61.12 was released.

	* emu-18.el (data-directory): New variable.


Thu Oct 24 04:08:58 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tl: Version 7.61.11 was released.

Wed Oct 23 06:37:13 1996  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-e20.el (charsets-mime-charset-alist): modified for